[package]
    edition = "2021"
    name    = "Learning_Rust"
    version = "0.1.0"

[dependencies]
    enigo = "0.3.0"
    lazy_static = "1.5.0"
    rdev = "0.5.3"
    serde = {version = "1.0.217", features = ["derive"]}
    toml = "0.8.19"
    windows = {version = "0.59.0", features = [
        "Win32_Foundation",
        "Win32_Graphics_Gdi",
        "Win32_Graphics_GdiPlus",
        "Win32_System_LibraryLoader",
        "Win32_System_Threading",
        "Win32_UI_Input_KeyboardAndMouse",
        "Win32_UI_WindowsAndMessaging"
    ]}
